# EIKGPolynomial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
eikg/: __init__.py  metrics.py  preprocessing.py  regressors.py  validation.py
tests/: main.py  test_regressor.py  test_sklearn_compatibility.py  test_validation.py
