[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eikgp-regressor"
version = "0.1.1"
description = "Numerically stable EIKG polynomial regressors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "EIKG Contributors" }
]
keywords = ["regression", "machine-learning", "scikit-learn", "numerical-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/your-org/eikgp-regressor"
Repository = "https://github.com/your-org/eikgp-regressor"
Issues = "https://github.com/your-org/eikgp-regressor/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
scipy = ["scipy>=1.10"]
sklearn = ["scikit-learn>=1.3"]
dev = [
  "pytest>=7.4",
  "pandas>=1.5",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["eikg", "eikg.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/main.py", "venv", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["eikg", "tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
 
 